bugfix: add '/' in Path

--- a/modules/eclipse/templates/eclipse.desktop.erb
+++ b/modules/eclipse/templates/eclipse.desktop.erb
@@ -4,7 +4,7 @@ Version=1.0
 Type=Application
 Name=workspace - Java EE - Eclipse
 Icon=<%= scope.lookupvar('eclipse::installdir') %>/eclipse/icon.xpm
-Path=<%= scope.lookupvar('eclipse::installdir') %>eclipse
+Path=<%= scope.lookupvar('eclipse::installdir') %>/eclipse
 Exec=<%= scope.lookupvar('eclipse::installdir') %>/eclipse/eclipse
 StartupNotify=false
 StartupWMClass=Eclipse
